syntax = "proto3";
package plugnmeet;

option go_package = "github.com/mynaparrot/plugnmeet-protocol/plugnmeet";

message CommonResponse {
  bool status = 1;
  string msg = 2;
}

message VerifyTokenReq {
  optional bool is_production = 1;
}

message VerifyTokenRes {
  bool status = 1;
  string msg = 2;
  optional string livekit_host = 3;
  optional string token = 4;
}

message MuteUnMuteTrackReq {
  string sid = 1;
  string room_id = 2;
  string user_id = 3;
  string track_sid = 4;
  bool muted = 5;
  string Requested_user_id = 6;
}
